# OpenAquaria

./: .coverage  README.md  TODO.md  Taskfile.yml  hub.db  pyproject.toml
docs/: config.example.yml  octopus.config.yml
openaquaria/: config.py  inventory.py  log.py  units.py
openaquaria/api/: __init__.py  tanks.py
openaquaria/devices/: analog_meter.py  camera.py  chiller.py  display.py  thermoelectric.py  thermometer.py
openaquaria/hub/: app.py  client.py  db.py
openaquaria/octopus/: observer.py  rest.py  run.py  sensor.py
tests/: config_test.py  units_test.py
tests/devices/: chiller_test.py
tests/octopus/: observer_test.py  sensor_test.py
