[tool.poetry]
name = "openaquaria"
version = "0.0.1"
description = ""
authors = ["Seth Curry <seth@scurry.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gpiozero = "^1.6.2"
PyYAML = "^5.4.1"
strictyaml = "^1.4.4"
SQLAlchemy = "^1.4.23"
RPLCD = "^1.3.0"
smbus2 = "^0.4.1"
fastapi = "^0.68.1"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
structlog = "^21.1.0"
colorama = "^0.4.4"
prometheus-client = "^0.11.0"
jsonschema = "^3.2.0"
requests = "^2.26.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
mypy = "^0.910"
pylama = "^7.7.1"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
mkdocs = "^1.2.2"
mkdocs-material = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
